# video-transcriber

./: .gitignore  README.md  pyproject.toml  transcribe.sh
transcriber/: cli.py  core.py
