[project]
name = "mediascribe"
version = "1.0.0"
description = "Transcribe video/audio files to markdown — local (Whisper) or cloud (OpenRouter/Gemini)"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "openai>=1.0.0",
]

[project.scripts]
transcribe = "transcriber.cli:main"
